--- a/home/styles/home.css
+++ b/home/styles/home.css
@@ -46,7 +46,11 @@ section#hero {
     font-size: 20px;
     color: #7e7e7e;
     line-height: 1;
-    margin: 0;
-    margin-top: 30px; }
-  section#hero a {
+    margin: 0; }
+  section#hero a.issue {
     color: #1866cf; }
+  section#hero a.button {
+    background-color: #3e60d9; }
+  section#hero a.white {
+    background-color: #fff;
+    color: #3e60d9; }
