--- a/scss/home/styles/home.scss
+++ b/scss/home/styles/home.scss
@@ -34,11 +34,17 @@ section {
 			color: rgb(126, 126, 126);
 			line-height: 1;
 			margin: 0;
-			margin-top: 30px;
 		}
 
-		a {
+		a.issue {
 			color: rgb(24, 102, 207);
+		}
+		a.button {
+			background-color: #3e60d9;
+		}
+		a.white {
+			background-color: #fff;
+			color: #3e60d9;
 		}
 	}
 }
